Написал дз в WebStorm

--- a/Home Work/Lesson 1/index.html
+++ b/Home Work/Lesson 1/index.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Mercedes-Benz G 500</title>
 </head>
 <body>
-$END$
+<h1>Mercedes-Benz G-class Gelendwagen</h1>
+<img src="images/stageelement_dffd.MQ6.0.stage.20190620145115.jpeg" height="650">
+<h2>Описание</h2>
+<p>Много лет назад инженеры в Граце создали внедорожник с уникальным геномом. Характерный дизайн, технологическое совершенство и невероятная мощь стали той основой, которая и сегодня, 40 лет спустя, определяет внутреннюю сущность всех последующих поколений <b>G-Класса.</b>
+    Единственный в своем роде, G-Класс выглядит так, как может выглядеть только G-Класс.
+    А возможности индивидуализации G manufaktur позволяют наделить автомобиль соответствующим вашей натуре характером.Программа индивидуализации G manufaktur позволяет превратить ваш G-Класс в действительно уникальный автомобиль. Многочисленные возможности комбинирования дают абсолютную свободу.
+    Вы сами выбираете цветовую комбинацию и расставляете акценты. Декоративная строчка, панель приборов или рулевое колесо станут отражением вашей индивидуальности. G manufaktur – это не только широкий выбор, но и ручная работа профессионалов самого высокого класса.</p>
+<h2>Характеристики автомобиля</h2>
+<p><b>Тип двигателя:</b>V8</p>
+<p><b>Марка топлива:</b>Бензин АИ-95</p>
+<p><b>Объем двигателя, куб. см.:</b>3982</p>
+<p><b>Клапанов на цилиндр:</b>4</p>
+<p><b>Мощность, л.с.:</b>421</p>
+<p><b>Достигается при об. в мин.:</b>5500</p>
+<p><b>Крутящий момент, Нм/об. в мин.:</b>610/2250 - 4750</p>
+<p><b>Максимальная скорость, км/ч:</b>210</p>
+<p><b>Время разгона до 100 км/ч, сек.:</b>5.9</p>
+<p><b>Расход топлива (смешанный цикл), л. на 100 км.:</b>12.3</p>
+<p><b>Расход топлива (в городе), л. на 100 км.:</b>14.5</p>
+<p><b>Расход топлива (за городом), л. на 100 км.:</b>11</p>
+<p><b>Система питания:</b>Непосрелственный впрыск</p>
+<h2>Подробное описание автомобиля</h2>
+<p>Очень часто по телевидению или радио можно услышать слово «Гелик». Вспомните хотя бы известный сериал «Физрук», где герой Дмитрия Нагиева ездит на Гелике. Ну, а на Yotube можно найти популярный клип «Гелик Вани».
+    Гелик — это сокращенное название Гелендвагена, то есть модели Mercedes-Benz G-класса. Гелендваген дословно с немецкого переводится, как «внедорожник». Также эту модель часто называют просто «Кубик» из-за ее характерной формы кузова.
+    Есть даже определенное сходство между российскими УАЗ-451 или более продвинутым УАЗ-Хантер, о котором мы ранее рассказывали на Vodi.su, и Мерседес-Бенц G-класса. Правда, это сходство только внешнее, так как Гелик значительно превосходит УАЗ по всем характеристикам.
+    Прежде всего нужно сказать, что Гелендваген лишь продается под торговой маркой Мерседес-Бенц. На самом же деле его производят в Австрии на заводах компании Magna Steyr. Данная компания, в свою очередь, принадлежит канадской корпорации Magna International — одному из ведущих мировых производителей запчастей практически для всех марок авто.
+    Magna Steyr — это крупнейший в мире производитель автомобилей, который не имеет собственного бренда.Главная  ›  Эксплуатация автомобиля  ›  Выбор  ›  Gelandewagen
+    Gelandewagen
+    skillbox.by
+    Станьте Java-разработчиком. Год английского - в подарок
+    Gelandewagen (Гелендваген) – что это за автомобиль?
+    Очень часто по телевидению или радио можно услышать слово «Гелик». Вспомните хотя бы известный сериал «Физрук», где герой Дмитрия Нагиева ездит на Гелике. Ну, а на Yotube можно найти популярный клип «Гелик Вани».
+    Гелик — это сокращенное название Гелендвагена, то есть модели Mercedes-Benz G-класса. Гелендваген дословно с немецкого переводится, как «внедорожник». Также эту модель часто называют просто «Кубик» из-за ее характерной формы кузова.
+    Есть даже определенное сходство между российскими УАЗ-451 или более продвинутым УАЗ-Хантер, о котором мы ранее рассказывали на Vodi.su, и Мерседес-Бенц G-класса. Правда, это сходство только внешнее, так как Гелик значительно превосходит УАЗ по всем характеристикам:
+    уровень комфорта;
+    технические характеристики;
+    ну и, конечно же, цена.
+    Хотя обе машины разрабатывались вначале для нужд армии, и лишь потом стали доступны более широкому кругу автолюбителей.
+    Gelandewagen2
+    Прежде всего нужно сказать, что Гелендваген лишь продается под торговой маркой Мерседес-Бенц. На самом же деле его производят в Австрии на заводах компании Magna Steyr. Данная компания, в свою очередь, принадлежит канадской корпорации Magna International — одному из ведущих мировых производителей запчастей практически для всех марок авто.
+    Magna Steyr — это крупнейший в мире производитель автомобилей, который не имеет собственного бренда.
+    Помимо Гелендвагенов здесь выпускают:
+    Mercedes-Benz E-класса;
+    BMW X3;
+    Saab 9-3 Convertible;
+    Jeep Grand Cherokee;
+    некоторые из моделей Крайслер, например Chrysler Voyager.
+    В год компания производит примерно 200-250 тысяч автомобилей.
+    Гелендваген в гражданской версии впервые сошел с конвейера в 1979 году, и с тех пор его характерная форма кузова абсолютно не претерпела изменений, что нельзя сказать об экстерьере и технических характеристиках.
+    Самый первый Гелик — это Mercedes-Benz W460. Его взяли на вооружение различные силовые структуры и армия. Он выпускался в двух модификациях: на 3 или 5 дверей. Рассчитан на 4-5 человек. Бронированная версия поставлялась специально в норвежские вооруженные силы.</p>
+<hr>
+<p><q>Все права защищены</q></p>
 </body>
 </html>
