--- a/Home Work/Lesson 1/Product.html
+++ b/Home Work/Lesson 1/Product.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Mercedes-Benz G 500</title>
+    <title>Mercedes</title>
 </head>
 <body>
 <h1>Mercedes-Benz G-class Gelendwagen</h1>
