--- a/Home Work/Lesson 1/catalog.html
+++ b/Home Work/Lesson 1/catalog.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Каталог</title>
 </head>
 <body>
-$END$
+My shop
+<ul>
+    <li><a href="index.html">Главная<a></li>
+    <li><a href="catalog.html">Каталог<a></li>
+    <li><a href="contact.html">Контакты<a></li>
+</ul>
+<hr>
+<h1>Каталог</h1>
+<img src="images/Gelik.jpg">
+<p>Mercedes-Benz G-Class</p>
+<a href="tovar%201.html">Подробнее</a>
+<br>
+<br>
+<br>
+<img src="images/s500.jpg" height="180">
+<p>Mercedes-Benz S-Class</p>
+<a href="tovar%202.html">Подробнее</a>
+<hr>
+&copy
+"Все права защищены"
 </body>
 </html>
