--- a/Home Work/Lesson 1/index.html
+++ b/Home Work/Lesson 1/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Mercedes</title>
 </head>
 <body>
-$END$
+My shop
+<ul>
+<li><a href="index.html">Главная<a></li>
+<li><a href="catalog.html">Каталог<a></li>
+<li><a href="contact.html">Контакты<a></li>
+</ul>
+<hr>
+<h1>Главная</h1>
+Вся информация об автомобиле и истории его обслуживания online. Актуальные рекомендации по пробегу, возрасту и
+диагностике в процессе произведенных ранее ремонтов специалистами сервисного центра
+<hr>
+&copy
+"Все права защищены"
 </body>
 </html>
