--- a/Home Work/Lesson 1/tovar 1.html
+++ b/Home Work/Lesson 1/tovar 1.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Tovar 1</title>
 </head>
 <body>
-$END$
+My shop
+<ul>
+    <li><a href="index.html">Главная<a></li>
+    <li><a href="catalog.html">Каталог<a></li>
+    <li><a href="contact.html">Контакты<a></li>
+</ul>
+<hr>
+<h1>Mercedes-Benz G-Class</h1>
+<img src="images/Gelik.jpg"
+<br>
+<p>Тот, у кого на пересеченной местности нет естественных врагов, хочет задавать тон и на трассе. Новый автомобиль
+    G-Class подкупает конструкцией мостов с точной системой подвески колес и четким управлением, что обеспечивает
+    значительное улучшение ходовых качеств на трассе. Разнообразные системы помощи водителю обеспечивают еще больше
+    надежности в пути. Система Intelligent Drive предусмотрена для серийных автомобилей и превращает внедорожник в самый
+    умный автомобиль G-Class всех времен. Все это предусмотрено на тот случай, если G представится возможность показать
+    свой класс и за пределами дикой природы.</p>
+<ul>
+<li><h2>Расход топлива:</h2> от 8.7 л/100 км</li>
+    <li><h2>Разгон до 100 км/ч:</h2> от 4.5 сек</li>
+    <li><h2>Мощность двигателя:</h2> до 585 л.с.</li>
+    <li><h2>Объем двигателя:</h2> 2.98 литров</li>
+</ul>
+<br>
+<br>
+<hr>
+&copy
+"Все права защищены"
 </body>
 </html>
