--- a/Home Work/Lesson 1/tovar 2.html
+++ b/Home Work/Lesson 1/tovar 2.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tovar 2</title>
 </head>
 <body>
-
+My shop
+<ul>
+    <li><a href="index.html">Главная<a></li>
+    <li><a href="catalog.html">Каталог<a></li>
+    <li><a href="contact.html">Контакты<a></li>
+</ul>
+<hr>
+<h1>Mercedes-Benz S-Class</h1>
+<img src="images/s500.jpg" height="180">
+<br>
+<p>Новый S-Класс объединяет благородные материалы и изысканные поверхности с прогрессивным дизайном. Демонстрация высоких
+технологий и информационно-развлекательной системы с интуитивным управлением. Из 64 цветов активной светодиодной
+подсветки салона создаются захватывающие цветовые композиции, которые могут динамично сменять друг друга или освещать
+несколько зон одновременно разными цветами.
+<ul>
+    <li><h2>Расход топлива:</h2> от 6.2 л/100 км</li>
+    <li><h2>Разгон до 100 км/ч:</h2> от 4,4 сек</li>
+    <li><h2>Мощность двигателя:</h2> до 503 л.с.</li>
+    <li><h2>Объем двигателя:</h2> 2.92 литров</li>
+</ul>
+<br>
+<br>
+<hr>
+&copy
+"Все права защищены"
+</body>
+</html>
 </body>
 </html>
