--- a/Home Work/Lesson 1/contact.html
+++ b/Home Work/Lesson 1/contact.html
@@ -5,6 +5,35 @@
     <title>Контакты</title>
 </head>
 <body>
-
+My shop
+<ul>
+    <li><a href="index.html">Главная<a></li>
+    <li><a href="catalog.html">Каталог<a></li>
+    <li><a href="contact.html">Контакты<a></li>
+</ul>
+<hr>
+<h1>Контакты</h1>
+<fieldset>
+    <legend>Напешите нам</legend>
+    <input placeholder="Введите ваше имя"><br>
+    <input placeholder="Введите ваш электронный адрес" type="email"><br>
+    <input placeholder="Тема сообщения"><br>
+    Суть вашего письма:<br>
+    <textarea cols="20" rows="2"></textarea>
+</fieldset>
+<h2>Адрес</h2><br>
+<b>Телефон:</b>+375254569823<br>
+<b>Адрес:</b>г. Минск, ул. Тимирязева, 70<br>
+<b>Email:</b>info@mercedes-benz.by<br>
+<br>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.462145303036!2d27.510233116121913!3d53.92353298010396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc56ec636c251%3A0x40448ef5212a99fa!2z0YPQuy4g0KLQuNC80LjRgNGP0LfQtdCy0LAgNzAsINCc0LjQvdGB0Lo!5e0!3m2!1sru!2sby!4v1678345765077!5m2!1sru!2sby"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+<br>
+<br>
+<br>
+<hr>
+&copy
+"Все права защищены"
 </body>
 </html>
