--- a/Home Work/Lesson 1/index.html
+++ b/Home Work/Lesson 1/index.html
@@ -5,7 +5,7 @@
     <title>Mercedes</title>
 </head>
 <body>
-My shop
+<p>My shop</p>
 <ul>
 <li><a href="index.html">Главная<a></li>
 <li><a href="catalog.html">Каталог<a></li>
@@ -13,12 +13,11 @@ My shop
 </ul>
 <hr>
 <h1>Главная</h1>
-Вся информация об автомобиле и истории его обслуживания online. Актуальные рекомендации по пробегу, возрасту и
-диагностике в процессе произведенных ранее ремонтов специалистами сервисного центра
+<p>Вся информация об автомобиле и истории его обслуживания online. Актуальные рекомендации по пробегу, возрасту и
+диагностике в процессе произведенных ранее ремонтов специалистами сервисного центра</p>
 <br>
 <br>
 <hr>
-&copy
-"Все права защищены"
+<p>&copy "Все права защищены"</p>
 </body>
 </html>
