--- a/Home Work/Lesson 1/tovar2.html
+++ b/Home Work/Lesson 1/tovar2.html
@@ -5,7 +5,7 @@
     <title>Tovar 2</title>
 </head>
 <body>
-My shop
+<p>My shop</p>
 <ul>
     <li><a href="index.html">Главная<a></li>
     <li><a href="catalog.html">Каталог<a></li>
@@ -18,7 +18,7 @@ My shop
 <p>Новый S-Класс объединяет благородные материалы и изысканные поверхности с прогрессивным дизайном. Демонстрация высоких
 технологий и информационно-развлекательной системы с интуитивным управлением. Из 64 цветов активной светодиодной
 подсветки салона создаются захватывающие цветовые композиции, которые могут динамично сменять друг друга или освещать
-несколько зон одновременно разными цветами.
+несколько зон одновременно разными цветами.</p>
 <ul>
     <li><h2>Расход топлива:</h2> от 6.2 л/100 км</li>
     <li><h2>Разгон до 100 км/ч:</h2> от 4,4 сек</li>
@@ -28,8 +28,7 @@ My shop
 <br>
 <br>
 <hr>
-&copy
-"Все права защищены"
+<p>&copy "Все права защищены"</p>
 </body>
 </html>
 </body>
