--- a/Home Work/Lesson 1/contact.html
+++ b/Home Work/Lesson 1/contact.html
@@ -5,7 +5,7 @@
     <title>Контакты</title>
 </head>
 <body>
-My shop
+<p>My shop</p>
 <ul>
     <li><a href="index.html">Главная<a></li>
     <li><a href="catalog.html">Каталог<a></li>
@@ -33,7 +33,6 @@ My shop
 <br>
 <br>
 <hr>
-&copy
-"Все права защищены"
+<p>&copy "Все права защищены"</p>
 </body>
 </html>
