--- a/Home Work/Lesson 1/tovar1.html
+++ b/Home Work/Lesson 1/tovar1.html
@@ -22,10 +22,10 @@
     умный автомобиль G-Class всех времен. Все это предусмотрено на тот случай, если G представится возможность показать
     свой класс и за пределами дикой природы.</p>
 <ul>
-<li><h2>Расход топлива:</h2> от 8.7 л/100 км</li>
-    <li><h2>Разгон до 100 км/ч:</h2> от 4.5 сек</li>
-    <li><h2>Мощность двигателя:</h2> до 585 л.с.</li>
-    <li><h2>Объем двигателя:</h2> 2.98 литров</li>
+<li><b>Расход топлива:</b> от 8.7 л/100 км</li>
+    <li><b>Разгон до 100 км/ч:</b> от 4.5 сек</li>
+    <li><b>Мощность двигателя:</b> до 585 л.с.</li>
+    <li><b>Объем двигателя:</b> 2.98 литров</li>
 </ul>
 <br>
 <br>
