--- a/Home Work/Lesson 1/tovar2.html
+++ b/Home Work/Lesson 1/tovar2.html
@@ -20,10 +20,10 @@
 подсветки салона создаются захватывающие цветовые композиции, которые могут динамично сменять друг друга или освещать
 несколько зон одновременно разными цветами.</p>
 <ul>
-    <li><h2>Расход топлива:</h2> от 6.2 л/100 км</li>
-    <li><h2>Разгон до 100 км/ч:</h2> от 4,4 сек</li>
-    <li><h2>Мощность двигателя:</h2> до 503 л.с.</li>
-    <li><h2>Объем двигателя:</h2> 2.92 литров</li>
+    <li><b>Расход топлива:</b> от 6.2 л/100 км</li>
+    <li><b>Разгон до 100 км/ч:</b> от 4,4 сек</li>
+    <li><b>Мощность двигателя:</b> до 503 л.с.</li>
+    <li><b>Объем двигателя:</b> 2.92 литров</li>
 </ul>
 <br>
 <br>
