--- a/Home Work/Lesson 1/contact.html
+++ b/Home Work/Lesson 1/contact.html
@@ -5,6 +5,7 @@
     <title>Контакты</title>
 </head>
 <body>
+<form action="#"
 <p>My shop</p>
 <ul>
     <li><a href="index.html">Главная<a></li>
@@ -20,6 +21,7 @@
     <input placeholder="Тема сообщения"><br>
     Суть вашего письма:<br>
     <textarea cols="20" rows="2"></textarea>
+    <input type="submit"
 </fieldset>
 <h2>Адрес</h2><br>
 <b>Телефон:</b>+375254569823<br>
@@ -34,5 +36,6 @@
 <br>
 <hr>
 <p>&copy "Все права защищены"</p>
+</form>
 </body>
 </html>
