--- a/Home Work/Lesson 1/contact.html
+++ b/Home Work/Lesson 1/contact.html
@@ -5,7 +5,6 @@
     <title>Контакты</title>
 </head>
 <body>
-<form action="#"
 <p>My shop</p>
 <ul>
     <li><a href="index.html">Главная<a></li>
@@ -14,6 +13,7 @@
 </ul>
 <hr>
 <h1>Контакты</h1>
+<form action="#"
 <fieldset>
     <legend>Напешите нам</legend>
     <input placeholder="Введите ваше имя"><br>
@@ -21,8 +21,9 @@
     <input placeholder="Тема сообщения"><br>
     Суть вашего письма:<br>
     <textarea cols="20" rows="2"></textarea>
-    <input type="submit"
+    <input type="submit">
 </fieldset>
+</form>
 <h2>Адрес</h2><br>
 <b>Телефон:</b>+375254569823<br>
 <b>Адрес:</b>г. Минск, ул. Тимирязева, 70<br>
@@ -36,6 +37,5 @@
 <br>
 <hr>
 <p>&copy "Все права защищены"</p>
-</form>
 </body>
 </html>
