Did homework by css

--- a/Home Work/Lesson 1/catalog.html
+++ b/Home Work/Lesson 1/catalog.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог</title>
+    <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
 <p>My shop</p>
 <ul>
-    <li><a href="index.html">Главная<a></li>
-    <li><a href="catalog.html">Каталог<a></li>
-    <li><a href="contact.html">Контакты<a></li>
+    <li><a class="LINK" href="index.html">Главная</a></li>
+    <li><a class="LINK" href="catalog.html">Каталог</a></li>
+    <li><a class="LINK" href="contact.html">Контакты</a></li>
 </ul>
 <hr>
-<h1>Каталог</h1>
+<h1 class="header">Каталог</h1>
 <img src="images/Gelik.jpg">
-<p>Mercedes-Benz G-Class</p>
-<a href="tovar%201.html">Подробнее</a>
+<p class="text-1">Mercedes-Benz G-Class</p>
+<a class="LINK" href="tovar%201.html">Подробнее</a>
 <br>
 <br>
 <br>
 <img src="images/s500.jpg" height="180">
-<p>Mercedes-Benz S-Class</p>
-<a href="tovar%202.html">Подробнее</a>
+<p class="text-1">Mercedes-Benz S-Class</p>
+<a class="LINK" href="tovar%202.html">Подробнее</a>
 <br>
 <br>
 <hr>
