--- a/Home Work/Lesson 1/contact.html
+++ b/Home Work/Lesson 1/contact.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Контакты</title>
+    <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
 <p>My shop</p>
 <ul>
-    <li><a href="index.html">Главная<a></li>
-    <li><a href="catalog.html">Каталог<a></li>
-    <li><a href="contact.html">Контакты<a></li>
+    <li><a class="LINK" href="index.html">Главная</a></li>
+    <li><a class="LINK" href="catalog.html">Каталог</a></li>
+    <li><a class="LINK" href="contact.html">Контакты</a></li>
 </ul>
 <hr>
-<h1>Контакты</h1>
-<form action="#"
+<h1 class="header">Контакты</h1>
+<form action="#">
 <fieldset>
     <legend>Напешите нам</legend>
-    <input placeholder="Введите ваше имя"><br>
-    <input placeholder="Введите ваш электронный адрес" type="email"><br>
-    <input placeholder="Тема сообщения"><br>
-    Суть вашего письма:<br>
+    <input class="imput" placeholder="Введите ваше имя"><br>
+    <input class="imput" placeholder="Введите ваш электронный адрес" type="email"><br>
+    <input class="imput" placeholder="Тема сообщения"><br>
+    <p>Суть вашего письма:</p>
     <textarea cols="20" rows="2"></textarea>
-    <input type="submit">
+    <input class="imput" type="submit">
 </fieldset>
 </form>
 <h2>Адрес</h2><br>
