--- a/Home Work/Lesson 1/index.html
+++ b/Home Work/Lesson 1/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Mercedes</title>
+    <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
 <p>My shop</p>
 <ul>
-<li><a href="index.html">Главная<a></li>
-<li><a href="catalog.html">Каталог<a></li>
-<li><a href="contact.html">Контакты<a></li>
+<li><a class="LINK" href="index.html">Главная</a></li>
+<li><a class="LINK" href="catalog.html">Каталог</a></li>
+<li><a class="LINK" href="contact.html">Контакты</a></li>
 </ul>
 <hr>
-<h1>Главная</h1>
-<p>Вся информация об автомобиле и истории его обслуживания online. Актуальные рекомендации по пробегу, возрасту и
+<h1 class="header">Главная</h1>
+<p class="text-1">Вся информация об автомобиле и истории его обслуживания online. Актуальные рекомендации по пробегу, возрасту и
 диагностике в процессе произведенных ранее ремонтов специалистами сервисного центра</p>
 <br>
 <br>
