--- a/Home Work/Lesson 1/tovar2.html
+++ b/Home Work/Lesson 1/tovar2.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Tovar 2</title>
+    <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
 <p>My shop</p>
 <ul>
-    <li><a href="index.html">Главная<a></li>
-    <li><a href="catalog.html">Каталог<a></li>
-    <li><a href="contact.html">Контакты<a></li>
+    <li><a class="LINK" href="index.html">Главная</a></li>
+    <li><a class="LINK" href="catalog.html">Каталог</a></li>
+    <li><a class="LINK" href="contact.html">Контакты</a></li>
 </ul>
 <hr>
-<h1>Mercedes-Benz S-Class</h1>
+<h1 class="header">Mercedes-Benz S-Class</h1>
 <img src="images/s500.jpg" height="180">
 <br>
-<p>Новый S-Класс объединяет благородные материалы и изысканные поверхности с прогрессивным дизайном. Демонстрация высоких
+<p class="text-2">Новый S-Класс объединяет благородные материалы и изысканные поверхности с прогрессивным дизайном. Демонстрация высоких
 технологий и информационно-развлекательной системы с интуитивным управлением. Из 64 цветов активной светодиодной
 подсветки салона создаются захватывающие цветовые композиции, которые могут динамично сменять друг друга или освещать
 несколько зон одновременно разными цветами.</p>
-<ul>
-    <li><b>Расход топлива:</b> от 6.2 л/100 км</li>
-    <li><b>Разгон до 100 км/ч:</b> от 4,4 сек</li>
-    <li><b>Мощность двигателя:</b> до 503 л.с.</li>
-    <li><b>Объем двигателя:</b> 2.92 литров</li>
+<ul class="ul">
+    <li class="ul_li"><b>Расход топлива:</b> от 6.2 л/100 км</li>
+    <li class="ul_li"><b>Разгон до 100 км/ч:</b> от 4,4 сек</li>
+    <li class="ul_li"><b>Мощность двигателя:</b> до 503 л.с.</li>
+    <li class="ul_li"><b>Объем двигателя:</b> 2.92 литров</li>
 </ul>
 <br>
 <br>
