--- a/Home Work/Lesson 1/contact.html
+++ b/Home Work/Lesson 1/contact.html
@@ -8,9 +8,9 @@
 <body>
 <p>My shop</p>
 <ul>
-    <li><a class="LINK" href="index.html">Главная</a></li>
-    <li><a class="LINK" href="catalog.html">Каталог</a></li>
-    <li><a class="LINK" href="contact.html">Контакты</a></li>
+    <li><a class="link" href="index.html">Главная</a></li>
+    <li><a class="link" href="catalog.html">Каталог</a></li>
+    <li><a class="link" href="contact.html">Контакты</a></li>
 </ul>
 <hr>
 <h1 class="header">Контакты</h1>
