--- a/Home Work/Lesson 1/index.html
+++ b/Home Work/Lesson 1/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
 <p>My shop</p>
-<ul>
+<header>
+    <a href="index.html"><img class="logo" src="../images/logo.png" width="100" alt="Mercedes-Benz">Mercedes-Benz</a>
+<ul class="menu">
 <li><a class="link" href="index.html">Главная</a></li>
 <li><a class="link" href="catalog.html">Каталог</a></li>
 <li><a class="link" href="contact.html">Контакты</a></li>
 </ul>
+</header>
 <hr>
 <h1 class="header">Главная</h1>
 <p class="text-1">Вся информация об автомобиле и истории его обслуживания online. Актуальные рекомендации по пробегу, возрасту и
