--- a/Home Work/Lesson 1/tovar1.html
+++ b/Home Work/Lesson 1/tovar1.html
@@ -7,11 +7,14 @@
 </head>
 <body>
 <p>My shop</p>
-<ul>
+<header>
+    <a href="index.html"><img class="logo" src="../images/logo.png" width="100" alt="Mercedes-Benz">Mercedes-Benz</a>
+<ul class="menu">
     <li><a class="link" href="index.html">Главная</a></li>
     <li><a class="link" href="catalog.html">Каталог</a></li>
     <li><a class="link" href="contact.html">Контакты</a></li>
 </ul>
+</header>
 <hr>
 <h1 class="header">Mercedes-Benz G-Class</h1>
 <img src="images/Gelik.jpg"/>
@@ -22,12 +25,24 @@
     надежности в пути. Система Intelligent Drive предусмотрена для серийных автомобилей и превращает внедорожник в самый
     умный автомобиль G-Class всех времен. Все это предусмотрено на тот случай, если G представится возможность показать
     свой класс и за пределами дикой природы.</p>
-<ul class="ul">
-<li class="ul_li"><b>Расход топлива:</b> от 8.7 л/100 км</li>
-    <li class="ul_li"><b>Разгон до 100 км/ч:</b> от 4.5 сек</li>
-    <li class="ul_li"><b>Мощность двигателя:</b> до 585 л.с.</li>
-    <li class="ul_li"><b>Объем двигателя:</b> 2.98 литров</li>
-</ul>
+<table class="Characteristics">
+    <tr>
+        <td>Расход топлива</td>
+        <td>от 8.7 л/100 км</td>
+    </tr>
+    <tr>
+        <td>Разгон до 100 км/ч</td>
+        <td>от 4.5 сек</td>
+    </tr>
+    <tr>
+        <td>Мощность двигателя</td>
+        <td> 585 л.с.</td>
+    </tr>
+    <tr>
+        <td>Объем двигателя</td>
+        <td>2.98 литров</td>
+    </tr>
+</table>
 <br>
 <br>
 <hr>
