--- a/Home Work/Lesson 1/catalog.html
+++ b/Home Work/Lesson 1/catalog.html
@@ -7,11 +7,14 @@
 </head>
 <body>
 <p>My shop</p>
-<ul>
+<header>
+    <a href="index.html"><img class="logo" src="../images/logo.png" width="100" alt="Mercedes-Benz">Mercedes-Benz</a>
+<ul class="menu">
     <li><a class="link" href="index.html">Главная</a></li>
     <li><a class="link" href="catalog.html">Каталог</a></li>
     <li><a class="link" href="contact.html">Контакты</a></li>
 </ul>
+</header>
 <hr>
 <h1 class="header">Каталог</h1>
 <img src="images/Gelik.jpg">
