--- a/Home Work/Lesson 1/contact.html
+++ b/Home Work/Lesson 1/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
-<p>My shop</p>
+<h1>Best auto shop</h1>
 <header>
     <a href="index.html"><img class="logo" src="../images/logo.png" width="100" alt="Mercedes-Benz">Mercedes-Benz</a>
 <ul class="menu">
