--- a/Home Work/Lesson 1/tovar2.html
+++ b/Home Work/Lesson 1/tovar2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
-<p>My shop</p>
+<h1>Best auto shop</h1>
 <header>
     <a href="index.html"><img class="logo" src="../images/logo.png" width="100" alt="Mercedes-Benz">Mercedes-Benz</a>
 <ul class="menu">
@@ -23,12 +23,24 @@
 технологий и информационно-развлекательной системы с интуитивным управлением. Из 64 цветов активной светодиодной
 подсветки салона создаются захватывающие цветовые композиции, которые могут динамично сменять друг друга или освещать
 несколько зон одновременно разными цветами.</p>
-<ul class="ul">
-    <li class="ul_li"><b>Расход топлива:</b> от 6.2 л/100 км</li>
-    <li class="ul_li"><b>Разгон до 100 км/ч:</b> от 4,4 сек</li>
-    <li class="ul_li"><b>Мощность двигателя:</b> до 503 л.с.</li>
-    <li class="ul_li"><b>Объем двигателя:</b> 2.92 литров</li>
-</ul>
+<table class="Characteristics">
+    <tr>
+        <td>Расход топлива</td>
+        <td>от 6.2л/100 км</td>
+    </tr>
+    <tr>
+        <td>Разгон до 100 км/ч</td>
+        <td>от 4.4 сек</td>
+    </tr>
+    <tr>
+        <td>Мощность двигателя</td>
+        <td> 503 л.с.</td>
+    </tr>
+    <tr>
+        <td>Объем двигателя</td>
+        <td>2.92 литров</td>
+    </tr>
+</table>
 <br>
 <br>
 <hr>
