--- a/Home Work/Lesson 1/catalog.html
+++ b/Home Work/Lesson 1/catalog.html
@@ -16,19 +16,13 @@
 </ul>
 </header>
 <hr>
-<h1 class="header">Каталог</h1>
-<img src="images/Gelik.jpg">
+<h2 class="header">Каталог</h2>
+<img src="images/Gelik.jpg" alt="Gelik">
 <p class="text-1">Mercedes-Benz G-Class</p>
-<a class="LINK" href="tovar%201.html">Подробнее</a>
-<br>
-<br>
-<br>
-<img src="images/s500.jpg" height="180">
+<a class="link" href="tovar%201.html">Подробнее</a>
+<img class="img" src="images/s500.jpg" alt="s500" height="180">
 <p class="text-1">Mercedes-Benz S-Class</p>
-<a class="LINK" href="tovar%202.html">Подробнее</a>
-<br>
-<br>
-<hr>
-<p>&copy "Все права защищены"</p>
+<a class="link" href="tovar%202.html">Подробнее</a>
+<p>&copy; "Все права защищены"</p>
 </body>
 </html>
