--- a/Home Work/Lesson 1/index.html
+++ b/Home Work/Lesson 1/index.html
@@ -16,12 +16,10 @@
 </ul>
 </header>
 <hr>
-<h1 class="header">Главная</h1>
+<h2 class="header">Главная</h2>
 <p class="text-1">Вся информация об автомобиле и истории его обслуживания online. Актуальные рекомендации по пробегу, возрасту и
 диагностике в процессе произведенных ранее ремонтов специалистами сервисного центра</p>
-<br>
-<br>
 <hr>
-<p>&copy "Все права защищены"</p>
+<p>&copy; "Все права защищены"</p>
 </body>
 </html>
