--- a/Home Work/Lesson 1/tovar1.html
+++ b/Home Work/Lesson 1/tovar1.html
@@ -17,8 +17,7 @@
 </header>
 <hr>
 <h1 class="header">Mercedes-Benz G-Class</h1>
-<img src="images/Gelik.jpg"/>
-<br>
+<img src="images/Gelik.jpg" alt="Gelik">
 <p class="text-2">Тот, у кого на пересеченной местности нет естественных врагов, хочет задавать тон и на трассе. Новый автомобиль
     G-Class подкупает конструкцией мостов с точной системой подвески колес и четким управлением, что обеспечивает
     значительное улучшение ходовых качеств на трассе. Разнообразные системы помощи водителю обеспечивают еще больше
@@ -43,9 +42,7 @@
         <td>2.98 литров</td>
     </tr>
 </table>
-<br>
-<br>
 <hr>
-<p>&copy "Все права защищены"</p>
+<p>&copy; "Все права защищены"</p>
 </body>
 </html>
