--- a/Home Work/Lesson 1/tovar2.html
+++ b/Home Work/Lesson 1/tovar2.html
@@ -17,8 +17,7 @@
 </header>
 <hr>
 <h1 class="header">Mercedes-Benz S-Class</h1>
-<img src="images/s500.jpg" height="180">
-<br>
+<img src="images/s500.jpg" alt="s500" height="180">
 <p class="text-2">Новый S-Класс объединяет благородные материалы и изысканные поверхности с прогрессивным дизайном. Демонстрация высоких
 технологий и информационно-развлекательной системы с интуитивным управлением. Из 64 цветов активной светодиодной
 подсветки салона создаются захватывающие цветовые композиции, которые могут динамично сменять друг друга или освещать
@@ -41,11 +40,7 @@
         <td>2.92 литров</td>
     </tr>
 </table>
-<br>
-<br>
 <hr>
-<p>&copy "Все права защищены"</p>
-</body>
-</html>
+<p>&copy; "Все права защищены"</p>
 </body>
 </html>
