--- a/Home Work/Lesson 1/contact.html
+++ b/Home Work/Lesson 1/contact.html
@@ -16,7 +16,7 @@
 </ul>
 </header>
 <hr>
-<h1 class="header">Контакты</h1>
+<h2 class="header">Контакты</h2>
 <form action="#">
 <fieldset>
     <legend>Напешите нам</legend>
@@ -29,9 +29,9 @@
 </fieldset>
 </form>
 <h2 class="adres">Адрес</h2>
-<div><b>Телефон:</b>+375254569823</div>
-<div><b>Адрес:</b>г. Минск, ул. Тимирязева, 70</div>
-<div><b>Email:</b>info@mercedes-benz.by</div>
+<span><b>Телефон:</b>+375254569823</span>
+<span><b>Адрес:</b>г. Минск, ул. Тимирязева, 70</span>
+<span><b>Email:</b>info@mercedes-benz.by</span>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2349.462145303036!2d27.510233116121913!3d53.92353298010396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc56ec636c251%3A0x40448ef5212a99fa!2z0YPQuy4g0KLQuNC80LjRgNGP0LfQtdCy0LAgNzAsINCc0LjQvdGB0Lo!5e0!3m2!1sru!2sby!4v1678345765077!5m2!1sru!2sby"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
